k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: battle-platform
  namespace: battle-platform
  labels:
    app: battle-platform
    env: prod
spec:
  type: ClusterIP
  selector:
    app: battle-platform
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: netty
    port: 9090
    targetPort: 9090
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
